--- a/ActivityLifyCycle/res/layout/activity_main.xml
+++ b/ActivityLifyCycle/res/layout/activity_main.xml
@@ -23,6 +23,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/dialog"
-        android:id="@+id/dialog"/>"
+        android:id="@+id/dialog"/>
+    
+    <Button 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tolist"
+        android:id="@+id/list"/>
 
 </LinearLayout>
